<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_drawer_news"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_photo"
            android:icon="@drawable/ic_drawer_image"
            android:title="@string/photo" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_share"
            android:title="@string/collect" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_drawer_calendar"
            android:title="@string/calendar" />
    </group>

    <item android:title="@string/tools">
        <menu>
            <item
                android:id="@+id/nav_night_mode"
                android:icon="@mipmap/ic_night"
                android:title="@string/night_mode"
                app:actionLayout="@layout/drawer_switch"
                app:showAsAction="always" />
            <item
                android:id="@+id/nav_about"
                android:icon="@mipmap/ic_drawer_about"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@mipmap/ic_drawer_setting"
                android:title="@string/tools" />
        </menu>
    </item>
</menu>
